<resources>
    <string name="app_name">Sudoku</string>
    <string name="play_button_text">Play</string>
    <string name="create_board_button_text">Create Puzzle</string>
    <string name="help_button_text">Help</string>
    <string name="submit_solution">Submit Solution</string>
    <string name="phone_a_friend">Phone a friend</string>
    <string name="sudoku_wikipedia">https://en.wikipedia.org/wiki/Sudoku</string>
    <string name="enter_phone_helper">Enter a phone number for Phone a Friend</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="submit_puzzle">Submit Puzzle</string>
    <string name="radio_button_clear_text">Clear</string>
    <string name="unsolvable_puzzle_toast">This puzzle is unsolvable!</string>
    <string name="min_clues_allowed_toast">The minimum amount of hints allowed is</string>
    <string name="number_of_hints_hint">Number of hints</string>
    <string name="num_of_hints_range_part1">The number of hints has to be at least</string>
    <string name="num_of_hints_range_part2">and no more than</string>
    <string name="puzzle_not_solved_toast">This puzzle is not solved!</string>
    <string name="high_scores_title">High Scores</string>
    <string name="rank_title">rank</string>
    <string name="time_title">time</string>
    <string name="name_title">name</string>
    <string name="hints_title">hints</string>
    <string name="send_mail_button_text">Share your high score</string>
    <string name="name_is_mandatory_toast">You must enter a name</string>
    <string name="filename">com.example.sudoku.highscores</string>
    <string name="email">matandorendevops@gmail.com</string>
</resources>
